- Added logger.